--- a/html/captura/cantos_edit.html
+++ b/html/captura/cantos_edit.html
@@ -77,7 +77,7 @@
 	                    <!-- Botón -->
 	                    <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-cantos-edit','cantos_edit');">{txt_agregar}</button>
+                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="editar('frm-captura-cantos-edit','cantos_edit');">{txt_actualizar}</button>
                             </div>
                         </div> 
                         <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
